--- a/3d-printing/reveal.js/3dprinting.html
+++ b/3d-printing/reveal.js/3dprinting.html
@@ -98,10 +98,249 @@
 					<p>
 						//TODO image types
 						FFF / FDM
-						SLA / DLP
+						SLA & DLP
 						SLS
 						Multi jet fusion
 						Metal
+					</p>
+				</section>
+
+				<section>
+					<h2>FFF / FDM</h2>	<!-- marlin schema -->
+					<p>
+
+					</p>
+				</section>
+
+				<section>
+					<h2>FFF / FDM</h2>	<!-- printers example -->
+					<p>
+						//TODO image - BCN3D sigma, delta, prusa mk2 multi
+					</p>
+				</section>
+
+				<section>
+					<h2>Filament pros/cons</h2>
+					<p>
+						//TODO image - filament
+					</p>
+				</section>
+
+				<section>
+					<h2>FFF Print</h2>
+					<p>
+						//TODO video - fff print, fff bridging
+					</p>
+				</section>
+
+				<section>
+					<h2>SLA & DLP</h2>
+					<p>
+						//TODO image - SLA marlin
+					</p>
+				</section>
+
+				<section>
+					<h2>SLA & DLP</h2>
+					<p>
+						//TODO video printing
+					</p>
+				</section>
+
+				<section>
+					<h2>SLA & DLP</h2>
+					<p>
+						//TODO image - printers 3dwarf & form2
+					</p>
+				</section>
+
+				<section>
+					<h2>SLA & DLP plus/cons</h2>
+					<p>
+						+ Details
+						+- Strength
+						- Materials
+						- Support
+
+						2500€ printer
+						60€ 1L resin
+
+						//TODO image SLA print
+					</p>
+				</section>
+
+				<section>
+					<h2>SLS (selective laser sintering)</h2>
+					<p>
+						//TODO image - sls schema
+					</p>
+				</section>
+
+				<section>
+					<h2>SLS plus/cons</h2>
+					<p>
+						+ details
+						+ no support
+						+ strenght
+						+- materials
+						€10k printer
+						€200 1kg powder
+					</p>
+				</section>
+
+				<section>
+					<h2>Multi jet fusion</h2>
+					<p>
+						//TODO image - marlin
+					</p>
+				</section>
+
+				<section>
+					<h2>Binder jetting</h2>
+					<p>
+						//TODO image - marlin
+					</p>
+				</section>
+
+				<section>
+					<h2>Binder jetting</h2>
+					<p>
+						//TODO video
+					</p>
+				</section>
+
+				<section>
+					<h2>Metal</h2>
+					<p>
+						//TODO image schema
+					</p>
+				</section>
+
+				<section>
+					<h2>Metal</h2>
+					<p>
+						//TODO video & image
+					</p>
+				</section>
+
+				<section>
+					<h2>Metal pros/cons</h2>
+					<p>
+						+ Details
+						+ No support
+						+ Strength
+						+ Metal
+
+						- Materials
+						- Atmosphere of inert gas
+						- €300k printer
+						//TODO image print with hammer
+					</p>
+				</section>
+
+				<section>
+					<h2>Metal</h2>
+					<p>
+						//TODO print images
+						3D printed turbopump prototype by NASA
+					</p>
+				</section>
+
+				<section>
+					<h2>Home printing</h2>
+					<p>
+						FFF or SLA/DLP
+					</p>
+				</section>
+
+				<section>
+					<h2>Print without printer</h2>
+					<p>
+						//TODO image gold neklace
+						3dhubs.com
+						i.materialise.com
+						shapeways.com
+						sculpteo.com
+						meltwerk.com
+					</p>
+				</section>
+
+				<section>
+					<h2>Limits</h2>
+					<p>
+						- details x print duration (hours, days)
+						- printable models
+						- own design
+					</p>
+				</section>
+
+				<section>
+					<h2>Models</h2>
+					<p>
+						thingiverse.com
+						youmagine.com
+						myminifactory.com
+						//TODO image thingiverse
+					</p>
+				</section>
+
+				<section>
+					<h2>Before you buy</h2>
+					<p>
+						Read a lot
+						https://www.youtube.com/user/ThomasSanladerer
+						https://www.3dhubs.com/knowledge-base
+						http://reprap.org/
+					</p>
+				</section>
+
+				<section>
+					<h2>Fails</h2>
+					<p>
+						//TODO image fails FFF & SLA
+					</p>
+				</section>
+
+				<section>
+					<h2>Troubleshooting</h2>
+					<p>
+						//TODO image troubleshooting
+					</p>
+				</section>
+
+				<section>
+					<h2>Printers</h2>
+					<p>
+						FFF/FDM
+						- Prusa i3 mk2
+						- Lutzbot
+						- Ultimaker 2
+						- BCN3D Sigma
+						€700, cheeper = more problems
+
+						SLA/DLP
+						- Form 2
+						- 3Dwarf
+						€2500
+						cheaper = no support from manufacturer
+					</p>
+				</section>
+
+				<section>
+					<h2>News - Prusa research</h2>
+					<p>
+						Prusa i3 mk2 printer
+						- mk2s upgrade 4w
+						- multi-material upgrade 15w
+						- kit 7w
+						- build 11w
+
+						Prusa research
+						- fast growing company
+						- slic3r
+						- pronterface
+
+						//TODO image prusa farm
 					</p>
 				</section>
 
