--- a/3d-printing/reveal.js/3dprinting.html
+++ b/3d-printing/reveal.js/3dprinting.html
@@ -15,7 +15,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css" id="theme">
+		<!--<link rel="stylesheet" href="css/theme/moon.css" id="theme">-->   <!--Dark theme-->
+		<link rel="stylesheet" href="css/theme/sky.css" id="theme">      <!--Light theme-->
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -49,18 +50,19 @@
 				</section>
 
 				<section>
-					<h2>How it works?</h2>
+					<h2>Complexity</h2>
 					<p>
-						//TODO: place icons
-						3d printer icon <> printer icon
+                        <img src="../images/pictogram-3d-printer.png" alt="Pictogram 3D printer"/>
+                        ≠
+                        <img src="../images/pictogram-printer.png" alt="Pictogram printer"/>
 					</p>
 				</section>
 
 				<section>
-					<h2>One word - multiple technologies?</h2>
+					<h2>One word - multiple technologies</h2>
 					<p>
+                        <img src="../images/3dhubs-additive-manufacturing-technologies.png" alt="3D technologies"/>
 						3dhubs.com/knowledge-base
-						//TODO image: technology tree
 					</p>
 				</section>
 
