--- a/3d-printing/reveal.js/3dprinting.html
+++ b/3d-printing/reveal.js/3dprinting.html
@@ -21,6 +21,8 @@
         <!-- Theme used for syntax highlighting of code -->
         <link rel="stylesheet" href="lib/css/zenburn.css">
 
+        <link rel="stylesheet" href="3dprinting.css">
+
         <!-- Printing and PDF exports -->
         <script>
             var link = document.createElement( 'link' );
@@ -49,39 +51,55 @@
                     </p>
                 </section>
 
-                <section>
+                <section class="center">
                     <h2>Complexity</h2>
-                    <p>
-                        <img src="../images/pictogram-3d-printer.png" alt="Pictogram 3D printer"/>
-                        ≠
-                        <img src="../images/pictogram-printer.png" alt="Pictogram printer"/>
-                    </p>
+
+                        <table>
+                    <tr>
+                        <td style="vertical-align: middle"><img src="../images/pictogram-3d-printer.png" alt="Pictogram 3D printer"/></td>
+                        <td style="vertical-align: middle; font-size: 150px;">≠</td>
+                        <td style="vertical-align: middle"><img src="../images/pictogram-printer.png" alt="Pictogram printer"/></td>
+                    </tr>
+                </table>
+
+
+
+
                 </section>
 
                 <section>
-                    <h2>One word - multiple technologies</h2>
-                    <p>
+                    <section>
+                        <h2>One word</h2>
+                        <h2>multiple technologies</h2>
+                        <p>
+                            <img src="../images/3dhubs-additive-manufacturing-technologies-basic.png" alt="3D technologies"/>
+                            3dhubs.com/knowledge-base
+                        </p>
+                    </section>
+
+                    <section>
                         <img src="../images/3dhubs-additive-manufacturing-technologies.png" alt="3D technologies"/>
-                        3dhubs.com/knowledge-base
-                    </p>
+                    </section>
                 </section>
 
                 <section>
                     <h2>How it works</h2>
                     <p>
-                        //TODO image: model-slicer-printer
+                        <img src="../images/3d-print-schema.png" alt="3D technologies"/>
                     </p>
                 </section>
 
                 <section>
                     <h2>Why 3D? Pros</h2>
                     <p>
-                        + Create complex designs
-                        + Customize each and every item
-                        + No nedd for tools and molds
-                        + Speed and ease of prototyping
-                        + Less waste
-                        + Lower fixed cost
+                        <ul style="list-style: none;">
+                            <li class="plus">Create complex designs</li>
+                            <li>+ Customize each and every item</li>
+                            <li>+ No nedd for tools and molds</li>
+                            <li>+ Speed and ease of prototyping</li>
+                            <li>+ Less waste</li>
+                            <li>+ Lower fixed cost</li>
+                        </ul>
                     </p>
                 </section>
 
