--- a/3d-printing/reveal.js/3dprinting.html
+++ b/3d-printing/reveal.js/3dprinting.html
@@ -91,26 +91,31 @@
 
                 <section>
                     <h2>Why 3D? Pros</h2>
-                    <p>
-                        <ul style="list-style: none;">
-                            <li class="plus">Create complex designs</li>
-                            <li>+ Customize each and every item</li>
-                            <li>+ No nedd for tools and molds</li>
-                            <li>+ Speed and ease of prototyping</li>
-                            <li>+ Less waste</li>
-                            <li>+ Lower fixed cost</li>
+                    <div class="plus">
+                        <ul>
+                            <li>Complex designs</li>
+                            <li>Customize each item</li>
+                            <li>Prototyping</li>
+                            <li>Less waste</li>
+                            <li>Lower fixed cost</li>
                         </ul>
-                    </p>
+                    </div>
+                    <aside class="notes">
+                        How to show them?
+                        https://github.com/hakimel/reveal.js#speaker-notes
+                    </aside>
                 </section>
 
                 <section>
                     <h2>Why 3D? Cons</h2>
-                    <p>
-                        - Higher cost for larger production runs
-                        - Less material choices, colors, finishes
-                        - Limit strength/endurance
-                        - Lower precision
-                    </p>
+                    <div class="minus">
+                        <ul>
+                            <li>Higher cost for larger production runs</li>
+                            <li>Less material choices, colors, finishes</li>
+                            <li>Limit strength/endurance</li>
+                            <li>Lower precision</li>
+                        </ul>
+                    </div>
                 </section>
 
                 <section>
