--- a/3d-printing/reveal.js/3dprinting.html
+++ b/3d-printing/reveal.js/3dprinting.html
@@ -56,9 +56,9 @@
 
                         <table>
                     <tr>
-                        <td style="vertical-align: middle"><img src="../images/pictogram-3d-printer.png" alt="Pictogram 3D printer"/></td>
+                        <td style="vertical-align: middle"><img src="../images/icons/fff-printer1.png" alt="Pictogram 3D printer"/></td>
                         <td style="vertical-align: middle; font-size: 150px;">≠</td>
-                        <td style="vertical-align: middle"><img src="../images/pictogram-printer.png" alt="Pictogram printer"/></td>
+                        <td style="vertical-align: middle"><img src="../images/icons/printer2.png" alt="Pictogram printer"/></td>
                     </tr>
                 </table>
 
